Semantics related to rebranding
Semantics related to rebranding

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -41,7 +41,7 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-Change $pt_ over to: $oct_ (for better semantics after rebranding)
+Investigate / report to PHP devs (IF IT'S NOT A FILE READ ISSUE) the .htaccess password bug (/classes/core/cache.php, line 189) issue on Windows 10 / XAMPP 3.3.0 / PHP 7.4.24: $htaccess_password = crypt( $htaccess_password, base64_encode($htaccess_password) );
 
 
 https://github.com/taoteh1221/Open_Crypto_Tracker/issues/19
@@ -60,9 +60,6 @@ Look into adding Balancer (BAL), Bittrex just added it for US customers.
 
 
 Check in on defipulse API data, unit tests showed it failing across the board for price data.
-
-
-Double-check that the internal API (AND EVERYTHING ELSE) still works, after all the refactoring we did.
 
 
 Make sure everything STILL runs smoothly with the charts page turned off.
@@ -140,7 +137,7 @@ Create github wiki with the current documentation for the portfolio app.
 Cross-browser test RTL (right to left) effects from middle eastern currency symbols being injected into the interface output for those currencies
 
 
-Test unicode mobile text message with no space in front of hex-encoded data (forgot to try that, coded and ready to go now...see $pt_gen->charset_encode() and /DOCUMENTATION-ETC/Developing-maintaining/DEBUGGING.txt).
+Test unicode mobile text message with no space in front of hex-encoded data (forgot to try that, coded and ready to go now...see $oct_gen->charset_encode() and /DOCUMENTATION-ETC/Developing-maintaining/DEBUGGING.txt).
 
 
 AFTER the admin config GUI has been built out, make sure plugin configs are re-loaded AFTER 'activate_plugins' in the power user section has been updated.
@@ -215,7 +212,7 @@ On 'more stats' page, add a 'market volume' chart, showing a multi-line chart (l
 Add logic to offer securing the computer in the auto-install. Add subsections "Requiring Password For Sudo (Admin)" / "Disabling Bluetooth" / "Enabling firewall" inside a main prompt "Would you like to secure your computer against hacks?" For the bluetooth disabling section, include a commented section so we know if we've already APPENDED (>> IN BASH, NOT >) to boot/config.txt (like we do for htaccess). For firewall setup add a loop that you add new ports to open and quit the loop when finished...AND AUTOMATICALLY OPEN PORTS 80 / 443 FOR THIS APP, AND SSH STUFF TOO IF DETECTED AS INSTALLED ON THE SYSTEM!
 
 
-Create a power user config option to toggle between plain text and HTML email. We can have the $pt_cache->queue_notify() function detect if HTML email is enabled, and run email messages through PHP's built-in nl2br() function if so, which converts newlines to <br /> tags.
+Create a power user config option to toggle between plain text and HTML email. We can have the $oct_cache->queue_notify() function detect if HTML email is enabled, and run email messages through PHP's built-in nl2br() function if so, which converts newlines to <br /> tags.
 
 
 Add a "Reset lite charts" button on the admin 'Reset' page, to trigger rebuilding lite charts.
@@ -257,7 +254,7 @@ Auto-update feature like WordPress has (downloads a zip file upgrade from github
 2-way JAVASCRIPT encryption option (unlocked with 6 digit PIN) for showing holdings amounts IN THE GUI (IN COOKIES ONLY, NO DATABASE STORAGE !EVER!), with "quick lock" to quickly re-hide portfolio data (staying hidden persists on page load / reload as well with a cookie).
 
 
-Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $pt_conf['gen']['backup_arch_pass']).
+Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $oct_conf['gen']['backup_arch_pass']).
 
 
 For each cat_key => cat_val loop app config, to automate categorizing new admin settings tabs...selects for arrays, text fields for strings. Maybe certain key names get checkbox / radio button fields.
@@ -272,7 +269,7 @@ Once an admin interface is fully built out, permanently switch out the app confi
 Add force reset logic for app config, if cached app version number is non-existent or below a certain version, so we force a complete reset for non-backwards-compatible upgrades.
 
 
-On admin config reset tab, have "reset app config to default settings" button (with js confirm alert when pushed) that refreshes ALL the cached pt_conf from config.php settings.
+On admin config reset tab, have "reset app config to default settings" button (with js confirm alert when pushed) that refreshes ALL the cached oct_conf from config.php settings.
 
 
 Admin import / export of settings (consider security implications CAREFULLY...include an optional / mandatory checkbox to encrypt to zip file with our new zip encryption feature).
