--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2245,7 +2245,7 @@ PERCENTAGES (BUT WILL BE ACCURATE AFTERWARDS).
 
 -Password storage and check functions (for upcoming easy-to-use Admin Config page)
 
--Secured password pepper (high security password encryption) caching / pt_conf caching support (for upcoming easy-to-use Admin Config page)
+-Secured password pepper (high security password encryption) caching / oct_conf caching support (for upcoming easy-to-use Admin Config page)
 
 -Unicode support for the mobile text message system (ONLY ACTIVATED WHEN emojis / asian characters / any other unicode characters are detected in text message data)
 
@@ -2255,7 +2255,7 @@ and pair volume has changed at least 20% with minimum currency volume of 10,000)
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2283,7 +2283,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2315,7 +2315,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2345,7 +2345,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2375,7 +2375,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2399,7 +2399,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 IMPORTANT NOTES: 
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2437,7 +2437,7 @@ IMPORTANT NOTES:
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2469,7 +2469,7 @@ IMPORTANT NOTES:
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2505,7 +2505,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2537,7 +2537,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2567,7 +2567,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2597,7 +2597,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2627,7 +2627,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2659,7 +2659,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2679,7 +2679,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Optimizations
 
--Better debug tracing on $pt_cache->ext_data() function
+-Better debug tracing on $oct_cache->ext_data() function
 
 -Bug fix for reliable coingecko API data retrieval
 
@@ -2689,7 +2689,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2727,7 +2727,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2759,7 +2759,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2793,7 +2793,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2827,7 +2827,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2857,7 +2857,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2875,7 +2875,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.08.9:
 
--!CRITICAL! bug fix in the $pt_asset->pairing_btc_val() function (web server get overloaded and crashes)
+-!CRITICAL! bug fix in the $oct_asset->pairing_btc_val() function (web server get overloaded and crashes)
 
 -Execution time config settings
 
@@ -2897,7 +2897,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2915,7 +2915,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.08.10:
 
--Additional !CRITICAL! bug fix for $pt_asset->pairing_btc_val() function overloading the server (SHOULD BE GOOD NOW, SORRY!)
+-Additional !CRITICAL! bug fix for $oct_asset->pairing_btc_val() function overloading the server (SHOULD BE GOOD NOW, SORRY!)
 
 -Raspberry Pi Security documentation
 
@@ -2933,7 +2933,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2963,7 +2963,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -2995,7 +2995,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3025,7 +3025,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3067,7 +3067,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3099,7 +3099,7 @@ v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EA
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3139,7 +3139,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3177,7 +3177,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3219,7 +3219,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3257,7 +3257,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3289,7 +3289,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3323,7 +3323,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3353,7 +3353,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3385,7 +3385,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3415,7 +3415,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3451,7 +3451,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3497,7 +3497,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3531,7 +3531,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3561,7 +3561,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3599,7 +3599,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3647,7 +3647,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3691,7 +3691,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3731,7 +3731,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3769,7 +3769,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3817,7 +3817,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3857,7 +3857,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3895,7 +3895,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
@@ -3935,7 +3935,7 @@ v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USE
 
 v4.06.0 AND HIGHER HAS MAJOR DIRECTORY STRUCTURE CHANGES. FOR CLEAN UPGRADES, FIRST DELETE EVERY SUB-DIRECTORY EXCEPT FOR THE 'CACHE' DIRECTORY BEFOREHAND.
 
-v4.06.0 and higher modularizes the configuration settings into the new $pt_conf array. ALL
+v4.06.0 and higher modularizes the configuration settings into the new $oct_conf array. ALL
 CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
