--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4671,6 +4671,9 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 -Another Windows 10 fix (sorry!), blank screen on page load
 
 
+-Semantic code changes after rebranding
+
+
 -------------------------------------------------------------------
 
 
